[package]
name = "stm32f7-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.4"  # Real-time interrupt-driven concurrency, optional
embedded-hal = "0.2"   # HAL for embedded devices
panic-halt = "0.2"     # Halts on panic (optional)

[build-dependencies]
cortex-m-rtic = "1.1.4"  # Optional

[package.metadata.cortex-m-rt]
memory.x = true

[dependencies.stm32f7xx-hal]
version = "0.8.0"
features = ["stm32f767", "rt"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"